@@ -97,4 +97,6 @@
   <Battlestimulation_jelly.stages.0.description>The entire body feels contorted.</Battlestimulation_jelly.stages.0.description>
   <TitleNoPersonalBedroom_B.stages.0.label>no personal bedroom</TitleNoPersonalBedroom_B.stages.0.label>
   <TitleNoPersonalBedroom_B.stages.0.description>I want my own bedroom!</TitleNoPersonalBedroom_B.stages.0.description>
+  <AT_Aphidextract_Mood.stages.0.label>my body is melting</AT_Aphidextract_Mood.stages.0.label>
+  <AT_Aphidextract_Mood.stages.0.description>Save me, help me, let me go home, I'm melting now, I feel like I'm on fire, save me, help me...I want to live!!!</AT_Aphidextract_Mood.stages.0.description>
 </LanguageData>
